include the mobile first layout

--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,8 +1,10 @@
 // Component Imports
+// Component Imports
+@import "./containers";
+@import "./navigation";
+@import "./grid";
 @import "./button";
 @import "./form";
-@import "./grid";
-@import "./navigation";
 @import "./images";
+@import "./animation";
 @import "./media-queries";
-@import "./toggle-switch";
