--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -1,4 +1,5 @@
 @media screen and (min-width: 768px) {
+  // grid
   .grid-container {
     grid-template-columns: 4rem 1fr;
     grid-template-areas:
@@ -11,18 +12,18 @@
   .main-header,
   .alert,
   .traffic,
-  .social-stats {
+  .social-stats,
+  .members,
+  .message,
+  .activity,
+  .settings {
     grid-column: 1 / span 2;
   }
-  .daily,
-  .members,
-  .message {
+  .daily {
     grid-column: 1 / span 1;
   }
 
-  .users,
-  .activity,
-  .settings {
+  .users {
     grid-column: 2 / span 1;
   }
 
@@ -31,5 +32,156 @@
   }
   .widget-container-half {
     width: 45vw;
+  }
+  //header
+  .user-info {
+    margin-right: 0.5rem;
+  }
+  //navigation
+  #nav {
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-start;
+
+    & .nav-icon {
+      margin-top: 1rem;
+    }
+  }
+  // dashboard
+  .main-header {
+    margin-left: 0.5rem;
+    font-size: 0.8rem;
+  }
+  .main-header-search {
+    width: 120%;
+  }
+  // alert banner
+  .alert-banner {
+    width: 95%;
+    height: 2.5rem;
+  }
+  // traffic header/navigation
+  .traffic {
+    margin-bottom: 0;
+  }
+  .traffic-header {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 0.5rem;
+    & h3 {
+      font-size: 1.1rem;
+    }
+  }
+  .traffic-nav {
+    width: 50%;
+    justify-content: center;
+  }
+  .traffic-nav-link {
+    font-size: 1rem;
+    margin-left: 1rem;
+  }
+  // daily traffic
+  .daily {
+    border-right: 1px solid #9b9b9b;
+    padding-right: 0.75rem;
+    & h3 {
+      margin-top: 0.75rem;
+      font-size: 1.1rem;
+    }
+  }
+
+  // mobile users
+  .users {
+    & h3 {
+      margin-top: 0.75rem;
+      font-size: 1.1rem;
+    }
+  }
+  // social stats
+  .social-stats {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    & h3 {
+      margin-top: 0.75rem;
+      margin-bottom: 0.75rem;
+      font-size: 1.1rem;
+    }
+  }
+  .social-name {
+    font-weight: 550;
+  }
+  .social-numbers {
+    font-size: 2.5rem;
+  }
+  .social-container-flex {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .social-container {
+    width: 32%;
+    height: 6.5rem;
+  }
+  // members
+  .members h3 {
+    font-size: 1.1rem;
+    margin-left: 1.5rem;
+  }
+  .members-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .member-info {
+    width: 4rem;
+    display: flex;
+    align-items: center;
+    text-align: left;
+  }
+  .members-text {
+    margin-left: 1rem;
+  }
+  .member-name,
+  .email,
+  .date-join {
+    font-size: 1rem;
+  }
+  // activity
+  .activity-details {
+    display: block;
+    font-size: 1.5rem;
+    color: $primary-color;
+  }
+  .activity h3 {
+    font-size: 1.1rem;
+    margin-left: 1.5rem;
+  }
+  .activity-container {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+  }
+  .activity-info {
+    width: 10rem;
+    display: flex;
+    align-items: center;
+    text-align: left;
+  }
+  .activity-text {
+    margin-left: 1rem;
+    font-size: 1rem;
+  }
+  .activity-text p {
+    width: 27rem;
+  }
+  // message
+  .message h3 {
+    font-size: 1.1rem;
+    margin-left: 1.5rem;
+  }
+
+  // settings
+  .settings h3 {
+    font-size: 1.1rem;
+    margin-left: 1.5rem;
   }
 }
