--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -34,6 +34,6 @@
 .active {
   color: #eee;
   background-color: #78cf82;
-  border-radius: 10px;
-  padding: 0.3rem 0.8rem;
+  border-radius: 50px;
+  padding: 0.5em 0.8em;
 }
