--- a/css/main.css
+++ b/css/main.css
@@ -552,8 +552,34 @@ form {
 .switch-light {
   display: flex;
   width: 100%;
-  justify-content: space-between;
   align-items: center; }
+
+.switch-light strong {
+  flex-basis: 215px; }
+
+.switch-ios.switch-light > span {
+  width: 115px;
+  height: 40px;
+  border: 2px #e0e0e0 solid; }
+
+.switch-ios.switch-light input:checked ~ span {
+  border-color: #e0e0e0;
+  box-shadow: inset 0 0 0 30px #7477bf; }
+
+.switch-ios.switch-light > span span:first-of-type {
+  padding-left: 45%; }
+
+.switch-ios.switch-light > span span:last-of-type {
+  padding-right: 60%; }
+
+.switch-ios.switch-light > span span:first-of-type,
+.switch-ios.switch-light > span span:last-of-type {
+  line-height: 2.2; }
+
+.switch-ios.switch-light a {
+  height: 1.75rem;
+  width: 1.75rem;
+  margin-top: 0.2rem; }
 
 .settings-btn {
   display: flex;
@@ -855,8 +881,6 @@ form {
   .activity,
   .settings {
     grid-column: 2 / span 1; }
-  .activity {
-    border-left: 1px solid #9b9b9b; }
   .activity-container {
     margin-left: 0.75rem; }
   .activity-info p {
@@ -882,8 +906,9 @@ form {
     border-right: 1px solid #9b9b9b;
     margin-bottom: 0; }
     .settings h3 {
-      margin-top: 0.75rem; }
+      margin-top: 0.75rem;
+      margin-bottom: 1.2rem; }
   #userField {
     height: 3rem; }
   #messageField {
-    height: 6.5rem; } }
+    height: 7rem; } }
