--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -195,9 +195,6 @@
     grid-column: 2 / span 1;
   }
   // activity
-  .activity {
-    border-left: 1px solid #9b9b9b;
-  }
   .activity-container {
     margin-left: 0.75rem;
   }
@@ -238,6 +235,7 @@
     margin-bottom: 0;
     & h3 {
       margin-top: 0.75rem;
+      margin-bottom: 1.2rem;
     }
   }
   #userField {
@@ -245,6 +243,6 @@
   }
 
   #messageField {
-    height: 6.5rem;
+    height: 7rem;
   }
 }
