Add auto-complete to user search field & save settings in local storage

--- a/css/main.css
+++ b/css/main.css
@@ -673,7 +673,38 @@ form {
   font-size: 0.75rem; }
 
 #userField {
-  height: 2.5rem; }
+  height: 2.5rem;
+  position: relative;
+  width: 100%; }
+
+.autocomplete {
+  position: relative;
+  display: inline-block; }
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  top: 100%;
+  left: 0;
+  right: 0; }
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4; }
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9; }
+
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff; }
 
 #messageField {
   height: 5.5rem; }
@@ -893,7 +924,6 @@ form {
     .members h3 {
       margin-top: 0.75rem; }
   .activity {
-    border-right: 1px solid #9b9b9b;
     margin-bottom: 0; }
     .activity h3 {
       margin-top: 0.75rem; }
@@ -903,7 +933,6 @@ form {
     .message h3 {
       margin-top: 0.75rem; }
   .settings {
-    border-right: 1px solid #9b9b9b;
     margin-bottom: 0; }
     .settings h3 {
       margin-top: 0.75rem;
