Add pop-up notifications

--- a/scss/component/_animation.scss
+++ b/scss/component/_animation.scss
@@ -1,12 +1,24 @@
 @keyframes ringing {
-  25% {
-    transform: scale(1.2) rotate(-10deg);
+  20% {
+    transform: scale(1.2) rotate(-20deg);
   }
-  75% {
-    transform: scale(1.2) rotate(10deg);
+  40% {
+    transform: scale(1.2) rotate(20deg);
+  }
+  60% {
+    transform: scale(1.2) rotate(-20deg);
+  }
+  80% {
+    transform: scale(1.2) rotate(-20deg);
+  }
+  90% {
+    transform: scale(1.2) rotate(0deg);
+  }
+  100% {
+    transform: scale(1.2) rotate(0deg);
   }
 }
 
 #container-bell:hover {
-  animation: ringing 2s ease-out;
+  animation: ringing 2s ease-out forwards;
 }
