--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,65 @@ section {
   color: #eee; }
 
 /* ============================================= */
+/*        Notifcations Container styles          */
+/* ============================================= */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 10%;
+  max-height: 100px;
+  text-align: center; }
+
+#overlay {
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  color: #ffffff;
+  justify-content: flex-start;
+  top: 4rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 5px; }
+
+.notification-overlay {
+  background-color: #7477bf;
+  z-index: 99; }
+
+.notifications {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: none;
+  /* Style the list items */ }
+  .notifications li {
+    border: 1px solid #ddd;
+    margin-top: -1px;
+    /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+    position: relative;
+    /* Add a light grey background color on hover */ }
+    .notifications li:hover {
+      background-color: #eee; }
+
+/* Style the close button (span) */
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 12px 16px;
+  transform: translate(0%, -50%); }
+  .close:hover {
+    background: #bbb; }
+
+/* ============================================= */
 /*        Dashboard Container styles             */
 /* ============================================= */
 .main-header {
@@ -773,13 +832,21 @@ form {
   width: 3.7rem; }
 
 @keyframes ringing {
-  25% {
-    transform: scale(1.2) rotate(-10deg); }
-  75% {
-    transform: scale(1.2) rotate(10deg); } }
+  20% {
+    transform: scale(1.2) rotate(-20deg); }
+  40% {
+    transform: scale(1.2) rotate(20deg); }
+  60% {
+    transform: scale(1.2) rotate(-20deg); }
+  80% {
+    transform: scale(1.2) rotate(-20deg); }
+  90% {
+    transform: scale(1.2) rotate(0deg); }
+  100% {
+    transform: scale(1.2) rotate(0deg); } }
 
 #container-bell:hover {
-  animation: ringing 2s ease-out; }
+  animation: ringing 2s ease-out forwards; }
 
 @media screen and (min-width: 768px) {
   .grid-container {
