--- a/scss/component/_containers.scss
+++ b/scss/component/_containers.scss
@@ -61,6 +61,74 @@ section {
 }
 
 /* ============================================= */
+/*        Notifcations Container styles          */
+/* ============================================= */
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 10%;
+  max-height: 100px;
+  text-align: center;
+}
+
+#overlay {
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  color: #ffffff;
+  justify-content: flex-start;
+  top: 4rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 5px;
+}
+
+.notification-overlay {
+  background-color: $primary-color;
+  z-index: 99;
+}
+
+.notifications {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: none;
+  /* Style the list items */
+  & li {
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+    position: relative;
+
+    /* Add a light grey background color on hover */
+    &:hover {
+      background-color: #eee;
+    }
+  }
+}
+/* Style the close button (span) */
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 12px 16px;
+  transform: translate(0%, -50%);
+
+  &:hover {
+    background: #bbb;
+  }
+}
+
+/* ============================================= */
 /*        Dashboard Container styles             */
 /* ============================================= */
 
